iaac/blueprint/infra/overlays/dev/namespace-patch.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infra
  labels:
    environment: dev
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    environment: dev
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    environment: dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: logging
  labels:
    environment: dev
