iaac/blueprint/infra/overlays/dev/postgres-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: infra
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: postgres
        resources:
          requests:
            cpu: 200m
            memory: 512Mi
          limits:
            cpu: 1000m
            memory: 1Gi
      - name: postgres-exporter
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 256Mi
