iaac/blueprint/infra/overlays/dev/redis-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: infra
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: redis
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 1Gi
        args:
        - redis-server
        - --maxmemory 1gb
        - --maxmemory-policy allkeys-lru
        - --save "900 1"
        - --save "300 10"
        - --save "60 10000"
        - --appendonly yes
      - name: redis-exporter
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 100m
            memory: 128Mi
